# ACE-Step-1.5-for-windows

./: .gitignore  1、install-uv-qinglong.ps1  2、run.ps1  2、run_gradio.ps1  3、run_server.ps1  4、run_npmgui.ps1  AGENTS.md  README.md  check_update.bat  cli.py  install_uv.bat  profile_inference.py  pyproject.toml  requirements-rocm-linux.txt  requirements-rocm.txt  requirements-xpu.txt  requirements.txt  sidestep_tui.py  start_api_server.bat  start_gradio_ui.bat  start_gradio_ui.sh  start_gradio_ui_macos.sh  start_gradio_ui_rocm.bat  train.py
.github/: copilot-instructions.md
.github/workflows/: codeql.yml
acestep/: acestep_v15_pipeline.py  api_server.py  audio_utils.py  constants.py  constrained_logits_processor.py  dit_alignment_score.py  gpu_config.py  handler.py  inference.py  llm_inference.py  model_downloader.py
acestep/api/: train_api_dataset_service.py  train_api_lokr_start_route.py  train_api_lora_start_route.py  train_api_models.py  train_api_runtime.py  train_api_service.py
acestep/gradio_ui/: api_routes.py  help_content.py  help_content_test.py
acestep/mlx_dit/: generate.py
acestep/training/: configs.py  data_module.py  data_module_test.py  dataset_builder.py  lokr_utils.py  lora_utils.py  path_safety.py  trainer.py
acestep/training_v2/: __init__.py  configs.py  estimate.py  model_loader.py  optim.py  preprocess.py  tensorboard_utils.py  trainer_fixed.py  trainer_vanilla.py
docs/en/: BENCHMARK.md  GPU_TROUBLESHOOTING.md  GRADIO_GUIDE.md  INSTALL.md  LoRA_Training_Tutorial.md  (+1 more)
openrouter/: openrouter_api_server.py
tests/: test_compute_max_new_tokens.py  test_load_model_context_reentrant.py
(+105 files in other folders)
