[project]
name = "ace-step"
version = "1.5.0"
description = "ACE-Step 1.5"
readme = "README.md"
requires-python = ">=3.11, <3.12"
license = {text = "Apache-2.0"}
dependencies = [
    # PyTorch for Linux/Windows with CUDA
    "torch==2.7.1; sys_platform != 'darwin'",
    "torchvision; sys_platform != 'darwin'",
    "torchaudio==2.7.1; sys_platform != 'darwin'",
    # PyTorch for macOS (CPU / MPS)
    "torch>=2.9.1; sys_platform == 'darwin'",
    "torchvision; sys_platform == 'darwin'",
    "torchaudio>=2.9.1; sys_platform == 'darwin'",
    # Common dependencies
    "transformers",
    "diffusers",
    "gradio",
    "matplotlib>=3.7.5",
    "scipy>=1.10.1",
    "soundfile>=0.13.1",
    "loguru>=0.7.3",
    "einops>=0.8.1",
    "accelerate>=1.12.0",
    "fastapi>=0.110.0",
    "diskcache",
    "uvicorn[standard]>=0.27.0",
    "numba>=0.63.1",
    "vector-quantize-pytorch>=1.27.15",
    "torchcodec>=0.9.1",
    # Local third-party packages
    "nano-vllm",
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
nano-vllm = { path = "acestep/third_parts/nano-vllm" }
torch = { index = "pytorch-cu128" }
torchvision = { index = "pytorch-cu128" }
torchaudio = { index = "pytorch-cu128" }

[project.scripts]
acestep = "acestep.acestep_v15_pipeline:main"
acestep-api = "acestep.api_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = []

[tool.hatch.build.targets.wheel]
packages = ["acestep"]
